# learnOpengl

./: CMakeLists.txt  README.md  build.sh  main.cc
include/: camera.h  shader.h  shader_base.h  steps.h
include/glad/: glad.h
libsrc/: CMakeLists.txt  glad.c
shader/: CMakeLists.txt  shader.cc  shader_base.cc
shader/src/: coordinate_fragment.txt  coordinate_vertex.txt  fragment.txt  lighting_cube_fragment.txt  lightmap_cube_vertex.vert  vertex.txt
shader/src/light/: cube_fragment.frag
shader/src/materail/: cube_fragment.frag  cube_vertex.vert
shader/src/material/: cube_fragment.frag
steps/: CMakeLists.txt  camera.cc  color.cc  coordinate.cc  lighting.cc  lightmap.cc  materials.cc  shader.cc
